--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   /*align-items: center;*/
   /*text-align: center;*/
 }
