--- a/src/SettingsCounter.css
+++ b/src/SettingsCounter.css
@@ -1,9 +1,15 @@
-.main{
-    width: 400px;
+.mainS{
+    width: 800px;
     height: 300px;
     background-color: rgba(227, 227, 173, 0.28);
     text-align: center;
     margin-top: 200px;
     /*margin-right:400px ;*/
     /*padding: 200px;*/
+}
+
+.divInput{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
 }
