--- a/src/Counter.css
+++ b/src/Counter.css
@@ -1,23 +1,44 @@
-.main{
-    width: 600px;
+.main {
+    width: 400px;
     height: 300px;
-    margin-top: 200px;
-    margin-right:400px ;
-    background-color: #cc8a8a;
+    /*margin-top: 200px;*/
+    /*margin-right:400px ;*/
+    /*background-color: #cc8a8a;*/
     text-align: center;
-    /*padding: 200px;*/
+    border: 1px solid deepskyblue;
+    border-radius: 20px;
 }
 
-.value{
-    width: 50px;
-    height: 50px;
-    margin: 0 auto;
-    background-color: white;
+
+.value {
+    width: 300px;
+    height: 150px;
+    margin: 20px auto;
+    /*background-color: white;*/
+    border: 1px solid deepskyblue;
+    border-radius: 10px;
+    color: white;
+
 }
 
-.button{
+.value-count {
+    font-size: 40px;
+    color: white;
+}
+
+.buttons {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 20%;
+    margin-top: 15%;
+}
+
+.button {
+    width: 100px;
+    height: 30px;
+    background-color: white;
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*justify-content: space-around;*/
+    /*margin-top: 20%;*/
 }
