--- a/src/SettingsCounter.css
+++ b/src/SettingsCounter.css
@@ -1,15 +1,22 @@
 .mainS{
-    width: 800px;
+    color: white;
+    width: 400px;
     height: 300px;
-    background-color: rgba(227, 227, 173, 0.28);
     text-align: center;
-    margin-top: 200px;
-    /*margin-right:400px ;*/
-    /*padding: 200px;*/
+    border: 1px solid deepskyblue;
+    border-radius: 20px;
+
+}
+.sc{
+    border: 1px solid deepskyblue;
+    border-radius: 10px;
+    width: 300px;
+    height: 50px;
+    margin: 20px auto;
 }
 
-.divInput{
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-}
+/*.divInput{*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*    padding: 20px;*/
+/*}*/
